@@ -29,6 +29,8 @@ Version 1.13.0+dev:
    * Force uniform font rendering settings across X11 and Apple OS X, avoiding
      color glitches resulting from incorrect applications of subpixel hinting
      (bug #20337).
+   * Hide mod options from the user command prompt dialog in the MP lobby when
+     not authenticated as a mod.
  * WML engine:
    * Added support for [object] duration=turn end
    * New or updated image path functions:
